--- a/newapp/Dockerfile
+++ b/newapp/Dockerfile
@@ -1,6 +1,6 @@
 FROM tomcat:8.5
 
-RUN mkdir /usr/local/tomcat/webapps
+#RUN mkdir /usr/local/tomcat/webapps
 
 COPY target/newapp.war /usr/local/tomcat/webapps
 
